# etubeapi

./: .gitignore  README.md  fw-scraped.yml  pyproject.toml
.github/workflows/: build-publish.yml
src/etubeapi/: lib.py  main.py
