[project]
name = "etubeapi"
authors = [
    { name = "Norbert Arkadiusz Görke", email = "me@ngorke.dev" },
    { name = "Magnust Hektoen Steensland", email = "mag.steensland@gmail.com" },
]
license = "Apache-2.0"
description = "CLI tool that allows for interacting with Shimano's E-Tube API"
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
    "httpx~=0.28.1",
    "beautifulsoup4~=4.13",
    "typer~=0.16.0",
    "rich~=13.9",
    "cattrs~=25.1",
    "PyYAML~=6.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/reven-project/etubeapi.git"

[project.scripts]
etubeapi = "etubeapi.main:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
